# touchless

./: .gitignore  CMakeLists.txt  readme.md
dbus/: generate-dbus-code.sh  touchless.xml  touchless_gdbus_common.cpp  touchless_gdbus_common.h  touchless_gdbus_proxy.cpp  touchless_gdbus_proxy.h  touchless_gdbus_stub.cpp  touchless_gdbus_stub.h
include/: DbusInterface.hpp  DbusInterfaceDaemonModeListener.hpp  DbusInterfaceListener.hpp  Gesture.hpp  GestureKeyframe.hpp  GestureParser.hpp  GestureParserListener.hpp  Hand.hpp  Hands.hpp  HandsParser.hpp  HandsParserListener.hpp  ParsedHand.hpp  ParsedHands.hpp  gesture_parser.hpp  touchless.hpp
include/api/: GestureParser.hpp  touchless.hpp
include/gesture-manager/: commands.hpp
src/: DbusInterface.cpp  Gesture.cpp  GestureKeyframe.cpp  GestureParser.cpp  Hand.cpp  Hands.cpp  HandsParser.cpp  ParsedHand.cpp  ParsedHands.cpp  example.cpp  gesture_parser.cpp  touchless.cpp
src/api/: GestureKeyframe.cpp  GestureParser.cpp  Hand.cpp  Hands.cpp  touchless.cpp
src/daemon/: main.cpp
src/gesture-manager/: commands.cpp  main.cpp
